#+STARTUP:showall

* NEWS (user visible changes)

** Release 0.9.9.x

*** mu

     - add 'mu script' command to run mu script, for example to do statistics on
       your message corpus
     - allow 'contact:' as a shortcut in queries for 'from:foo OR to:foo OR
       cc:foo OR bcc:foo'

*** mu4e

    - scroll down in message view takes you to next message (but see
      `mu4e-view-scroll-to-next')
    - support 'human dates', that is, show the time for today's messages, and
      the date for older messages in the headers view
    - replace `mu4e-user-mail-address-regexp' and `mu4e-my-mail-addresses' with
      `mu4e-user-mail-address-list'
    - support tags (i.e.., X-Keywords and friends) in the headers-view, and the
      message view. Thanks to Abdó Roig-Maranges. New field ":tags".
    - automatically update the headers buffer when new messages are found during
      indexing; set `mu4e-headers-auto-update' to nil to disable this.

* Old news
  :PROPERTIES:
  :VISIBILITY: folded
  :END:

** Release 0.9.9 <2012-10-14>

*** mu4e
    - view: address can be toggled long/short, compose message
    - sanitize opening urls (mouse-1, and not too eager)
    - tooltips for header labels, flags
    - add sort buttons to header-labels
    - support signing / decryption of messages
    - improve address-autocompletion (e.g., ensure it's case-insensitive)
    - much faster when there are many maildirs
    - improved line wrapping
    - better handle attached messages
    - improved URL-matching
    - improved messages to user (mu4e-(warn|error|message))
    - add refiling functionality
    - support fancy non-ascii in the UI
    - dynamic folders (i.e.., allow mu4e-(sent|draft|trash|refile)-folder) to
      be a function
    - dynamic attachment download folder (can be a function now)
    - much improved manual

*** mu
    - remove --summary (use --summary-len instead)
    - add --after for mu find, to limit to messages after T