@@ -119,14 +119,14 @@ search fields and their abbreviations:
 	tag,x           Tags for the message (\fIX-Label\fR and/or \fIX-Keywords\fR)
 .fi
 
-There is also the special field \fBcontact\fR, which matches all
-contact-fields (\fBfrom\fR, \fBto\fR, \fBcc\fR and \fBbcc\fR).
+There are also the special fields \fBcontact\fR, which matches all
+contact-fields (\fBfrom\fR, \fBto\fR, \fBcc\fR and \fBbcc\fR), and
+\fBrecip\fR, which matches all recipient-fields (\fBto\fR, \fBcc\fR and
+\fBbcc\fR).
 
-The meaning of most of these fields should be clear, but some require some
-extra discusion.
-
-First, the message flags field describes certain properties of the message, as
-listed in the following table:
+The meaning of most of the above fields should be clear, but some require some
+extra discusion. First, the message flags field describes certain properties
+of the message, as listed in the following table:
 
 .nf
 	d,draft         Draft Message
